--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*********************************************************************************/
 /*DEVICES from ~320px to 479px*/
 /*********************************************************************************/
-* { box-sizing: border-box; }
+* { -webkit-box-sizing: border-box; box-sizing: border-box; }
 *:focus { outline-color: transparent; }
 
 body {
@@ -18,6 +18,9 @@ body {
 header {
   position: relative;
   height: 100vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../img/header-back.jpeg");
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
   background-size: cover;
   background-position: center;
@@ -58,6 +61,8 @@ header {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
+  -webkit-transition: all .2s;
+  -o-transition: all .2s;
   transition: all .2s;
 }
 
@@ -89,8 +94,12 @@ header {
   z-index: 200;
   width: 100%;
   padding: 0 5%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#303030), to(#606060));
+  background: -webkit-linear-gradient(#303030, #606060);
+  background: -o-linear-gradient(#303030, #606060);
   background: linear-gradient(#303030, #606060);
-  box-shadow: 0 2px 15px #303030;
+  -webkit-box-shadow: 0 2px 15px #303030;
+          box-shadow: 0 2px 15px #303030;
 }
 
 .fixed-nav .logo {
@@ -153,6 +162,8 @@ h1.animated { opacity: 1; }
   text-transform: uppercase;
   color: #d87200;
   cursor: pointer;
+  -webkit-transition: color .2s, background-color .3s;
+  -o-transition: color .2s, background-color .3s;
   transition: color .2s, background-color .3s;
 }
 
@@ -211,8 +222,11 @@ h3 {
 /*------------------------------------------------------------------------------*/
 .food-photos {
   max-width: 1300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 50px auto 0;
 }
 
@@ -227,13 +241,19 @@ h3 {
   display: block;
   width: 100%;
   opacity: 0.5;
-  transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+          transform: scale(1.15);
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
   transition: all .5s;
 }
 
 .meal-img img:hover {
   opacity: 1;
-  transform: scale(1);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 /*-----------------------------------------------------------------------------*/
 /*HOW IT WORKS */
@@ -276,12 +296,19 @@ h3 {
 
 .mobile-app img {
   width: 80px;
+  -webkit-transition: -webkit-transform .3s, -webkit-filter .3s;
+  transition: -webkit-transform .3s, -webkit-filter .3s;
+  -o-transition: transform .3s, filter .3s;
   transition: transform .3s, filter .3s;
+  transition: transform .3s, filter .3s, -webkit-transform .3s, -webkit-filter .3s;
 }
 
 .mobile-app img:hover {
-  transform: scale(1.15);
-  filter: invert(100%);
+  -webkit-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+          transform: scale(1.15);
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
 }
 
 .mobile-app:first-of-type { margin-left: 90px; }
@@ -294,7 +321,8 @@ h3 {
   width: 90%;
   height: 300px;
   margin: 0 auto;
-  box-shadow: 2px 2px 20px #000;
+  -webkit-box-shadow: 2px 2px 20px #000;
+          box-shadow: 2px 2px 20px #000;
 }
 /*=====================================*/
 /*Animation*/
@@ -311,6 +339,8 @@ h3 {
 
 .black-box a {
   color: #fff;
+  -webkit-transition: color .2s;
+  -o-transition: color .2s;
   transition: color .2s;
 }
 
@@ -352,6 +382,12 @@ h3 {
 /*-------------------------------------------------------------------------------*/
 .testimonials {
   padding-bottom: 5px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))),
+    url("../img/testimonials-back.jpg");
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../img/testimonials-back.jpg");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../img/testimonials-back.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../img/testimonials-back.jpg");
   background-size: cover;
@@ -400,7 +436,8 @@ h3 {
   margin: 15px auto;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 2px 2px 20px #909090;
+  -webkit-box-shadow: 2px 2px 20px #909090;
+          box-shadow: 2px 2px 20px #909090;
   background: rgba(255, 255, 255, 0.7);
 }
 
@@ -454,15 +491,19 @@ textarea {
   border-radius: 1px;
   font-size: 120%;
   font-family: 'Lato', sans-serif;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
   transition: all .3s;
-  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 input:focus,
 select:focus,
 textarea:focus {
   outline: none;
-  box-shadow: inset 0px 1px 10px white, 0px 1px 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0px 1px 10px white, 0px 1px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0px 1px 10px white, 0px 1px 10px rgba(0, 0, 0, 0.5);
 }
 
 select { background: none; }
@@ -481,8 +522,11 @@ select { background: none; }
   margin-bottom: 20px;
   background: #fffcf4;
   background: -webkit-linear-gradient(top, #fffcf4 0%, #e5e0d7 40%, #beb8ad 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fffcf4), color-stop(40%, #e5e0d7), to(#beb8ad));
+  background: -o-linear-gradient(top, #fffcf4 0%, #e5e0d7 40%, #beb8ad 100%);
   background: linear-gradient(to bottom, #fffcf4 0%, #e5e0d7 40%, #beb8ad 100%);
-  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .checkbox label {
@@ -493,8 +537,11 @@ select { background: none; }
   left: 4px;
   cursor: pointer;
   background: -webkit-linear-gradient(top, #222222 0%, #45484d 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#222222), to(#45484d));
+  background: -o-linear-gradient(top, #222222 0%, #45484d 100%);
   background: linear-gradient(to bottom, #222222 0%, #45484d 100%);
-  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px white;
+  -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px white;
+          box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px white;
 }
 
 .checkbox label:after {
@@ -506,8 +553,11 @@ select { background: none; }
   left: 2px;
   background: #ff9e28;
   background: -webkit-linear-gradient(top, #ff9e28 0%, #5b4013 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff9e28), to(#5b4013));
+  background: -o-linear-gradient(top, #ff9e28 0%, #5b4013 100%);
   background: linear-gradient(to bottom, #ff9e28 0%, #5b4013 100%);
-  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
   opacity: 0;
 }
 
@@ -544,6 +594,8 @@ select { background: none; }
   padding: 10px;
   text-decoration: none;
   color: #e8e8e8;
+  -webkit-transition: color .2s;
+  -o-transition: color .2s;
   transition: color .2s;
 }
 
@@ -614,8 +666,11 @@ select { background: none; }
 @media only screen and (min-width: 830px) {
 
   .boxes {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .service-description {
@@ -680,10 +735,6 @@ select { background: none; }
     display: inline-block;
     margin-left: 40px;
   }
-
-  /*Fixed nav*/
-
-  /*----------------------*/
 
   h1 span { margin-left: 40px; }
 
